--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -1,6 +1,6 @@
 .page-header {
   position: relative;
-  .contaner ();
+  .container ();
   z-index: 1;
-  background: #ffffff;
+  background: @color-3;
 }
