--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,4 +1,4 @@
-.contaner() {
+.container() {
   width: 320px;
   margin: auto;
   @media (min-width: 768px) {
@@ -9,7 +9,7 @@
   }
 }
 
-.states () {
+.states() {
   &:hover {
     color: #81b3d2;
   }
