--- a/less/style.less
+++ b/less/style.less
@@ -1,12 +1,13 @@
-@import "normalize.less";
+@import "variables.less";
+@import "mixins.less";
 
+@import "normalize.less";
 @import "global/fonts.less";
 
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
 @import "blocks/main.less";
 @import "blocks/intro.less";
-@import "blocks/features.less";
 @import "blocks/search.less";
 @import "blocks/button.less";
 @import "blocks/page-footer.less";
@@ -16,7 +17,10 @@
 @import "blocks/photos.less";
 @import "blocks/player.less";
 @import "blocks/video.less";
+@import "blocks/page-heading.less";
+@import "blocks/reason.less";
+@import "blocks/offers.less";
+@import "blocks/offer.less";
+@import "blocks/hashtag.less";
 
-@import "variables.less";
-@import "mixins.less";
 @import "scaffolding.less";
