--- a/less/variables.less
+++ b/less/variables.less
@@ -1,1 +1,17 @@
-@item-padding: 22px 20px;
+@font-face-primary: 'PT Sans', 'Roboto', sans-serif;
+
+@tablet: ~"(min-width: 768px)";
+@desktop: ~"(min-width: 1200px)";
+
+@color-1: #000000; //black
+@color-2: #333333; // darkgray
+@color-3: #ffffff; // white
+@color-4: #81b3d2; // blue
+@color-5: #eeeeee; // lightgray
+@color-6: #d6d6d6; // gray
+@color-7: #f2f2f2; // background-color
+@color-8: #88b6d1; // button-text-active
+@color-9: #5496bd; // button-background-active
+@color-10: #e5e5e5; // button-background-disabled
+@color-11: #669ec0; // button-background-hover
+@color-12: #b2b2b2; // hashtag-active
