--- a/less/blocks/button.less
+++ b/less/blocks/button.less
@@ -3,28 +3,33 @@
   padding: 11px 0px;
   font-size: 21px;
   line-height: 26px;
-  font-family: 'PT Sans', 'Roboto', sans-serif;
-  font-weight: 900;
+  font-family: @font-face-primary;
+  font-weight: 700;
   color: #ffffff;
   text-transform: uppercase;
-  background: #81b3d2;
+  background: @color-4;
   cursor: pointer;
+
   &:hover {
-    background: #669ec0;
+    background: @color-11;
   }
+
   &:active {
-    background: #5496bd;
-    .button__text {
-      opacity: .3;
-    }
+    background: @color-9;
+    color: @color-8;
   }
+
   &:disabled {
-    background: #e5e5e5;
+    background: @color-10;
+  }
+
+  @media @tablet {
+    width: 100%;
+    padding: 16px 0px;
   }
 }
 
-@media (min-width: 768px) {
-
+@media @tablet {
   .button {
     width: 100%;
     padding: 16px 0px;
