--- a/less/blocks/copyright.less
+++ b/less/blocks/copyright.less
@@ -1,14 +1,8 @@
 .copyright {
   margin-top: 40px;
-  &:hover {
-    .copyright__svg {
-      fill: #81b3d2;
-    }
-  }
-  &:active {
-    .copyright__svg {
-      fill: #b2b2b2;
-    }
+
+  @media @tablet {
+    margin-top: 0px;
   }
 }
 
@@ -16,20 +10,22 @@
   position: relative;
   display: block;
   font-size: 14px;
-  font-family: 'PT Sans', 'Roboto', sans-serif;
   font-weight: 400;
-  color: #000000;
-  text-transform: uppercase;
-}
+  color: @color-1;
 
-.copyright__svg {
-  fill: #000000;
-  width: 27px;
-  vertical-align: middle;
-}
-
-@media (min-width: 768px) {
-  .copyright {
-    margin-top: 0px;
+  &:hover .copyright__icon {
+  fill: @color-4;
   }
+
+  &:active .copyright__icon {
+  fill: @color-12;
+  }
+}
+
+.copyright__icon {
+  fill: @color-1;
+  width: 27px;
+  height: 34px;
+  vertical-align: middle;
+  cursor: pointer;
 }
