--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -1,7 +1,8 @@
 .main-nav {
   position: relative;
   padding-bottom: 56px;
-  @media (min-width: 768px) {
+
+  @media @tablet {
     padding-bottom: 0px;
   }
 }
@@ -10,7 +11,7 @@
   height: 0px;
   position: relative;
   top: -56px;
-  .contaner;
+  .container;
   display: flex;
   justify-content: center;
   z-index: 1;
@@ -18,19 +19,22 @@
 
 .main-nav__item {
   background: #81b3d2;
-  color: #ffffff;
+  color:  @color-3;
   font-size: 18px;
   line-height: 40px;
   text-transform: uppercase;
   border-top: 1px solid #9ac2db;
   border-bottom: 1px solid #678fa8;
+
   &:first-of-type {
     border-top: none;
   }
+
   &:last-of-type {
     border-bottom: none;
     box-shadow: inset 0px -15px 25px -20px rgba(0,0,0,1);
   }
+
   &:active {
     .main-nav__link {
     opacity: .3;
@@ -41,8 +45,9 @@
 .main-nav__link {
   text-align: center;
   display: block;
-  color: #ffffff;
+  color:  @color-3;
   padding: 8px 0px;
+
   &:hover {
     background: #669ec0;
   }
@@ -63,6 +68,7 @@
   outline: none;
   z-index: 4;
   }
+
   .main-nav__items {
     display: none;
   }
@@ -72,6 +78,7 @@
   .main-nav__items {
   display: block;
   }
+
   .main-nav__toggle {
     position: absolute;
     z-index: 1;
@@ -84,6 +91,7 @@
     top: 16px;
     right: 16px;
     background: none;
+
     &::before,
     &::after {
       position: absolute;
@@ -91,13 +99,15 @@
       display: block;
       width: 28px;
       height: 4px;
-      background: #ffffff;
+      background:  @color-3;
       top: 10px;
       right: 6.5%;
     }
+
     &::before {
       transform: rotate(45deg);
     }
+
     &::after {
       transform: rotate(-45deg);
     }
@@ -108,12 +118,13 @@
   .main-nav__toggle {
   display: none;
   }
+
   .main-nav__items {
     display: block;
   }
 }
 
-@media (min-width: 768px) {
+@media @tablet {
   .main-nav__toggle {
     display: none;
   }
@@ -124,14 +135,16 @@
   }
 
   .main-nav__item {
-    background: #ffffff;
+    background: @color-3;
     font-size: 14px;
     line-height: 26px;
     width: 20%;
     border: none;
+
     &:last-of-type {
       box-shadow: none;
     }
+
     &:nth-of-type(2) {
       margin-right: auto;
     }
@@ -146,24 +159,28 @@
     position: relative;
     text-align: center;
     display: block;
-    color: #000000;
+    color: @color-1;
     font-weight: 900;
     padding: 15px 0px;
+
     &:hover {
-      color: #81b3d2;
+      color: @color-4;
       background: none;
     }
+
     &:active {
-      color: #000000;
+      color: @color-1;
       opacity: .3;
     }
   }
 
   .main-nav__items .main-nav__link--active {
     color: #766357;
+
     &:hover {
       color: #604e43;
     }
+
     &:active {
       opacity: .3;
     }
