--- a/less/blocks/search.less
+++ b/less/blocks/search.less
@@ -1,48 +1,39 @@
 .search {
-  .contaner ();
+  .container ();
   padding: 30px 20px 50px;
   text-align: center;
+
+  @media @tablet {
+    padding: 58px 155px;
+  }
+
+  @media @desktop {
+    padding: 50px 370px 70px;
+  }
 }
 
 .search__title {
   font-size: 21px;
   line-height: 26px;
-  font-family: 'PT Sans', 'Roboto', sans-serif;
-  font-weight: 900;
-  color: #000000;
-  text-transform: uppercase;
+  font-weight: 700;
+  color: @color-1;
+
+  @media @tablet {
+    font-size: 30px;
+  }
 }
 
 .search__text {
   padding: 24px 0px 40px;
   font-size: 14px;
-  line-height: 24px;
-  font-family: 'PT Sans', 'Roboto', sans-serif;
   font-weight: 400;
-  color: #333333;
-  text-transform: uppercase;
-}
+  color: @color-2;
 
-@media (min-width: 768px) {
-
-  .search {
-    padding: 58px 155px;
-  }
-
-  .search__title {
-    font-size: 30px;
-  }
-
-  .search__text {
+  @media @tablet {
     padding: 27px 0px 43px;
   }
-}
 
-@media (min-width: 1200px) {
-  .search {
-    padding: 50px 370px 70px;
-    .search__text {
-      padding: 30px 0px 50px;
-    }
+  @media @desktop {
+    padding: 30px 0px 50px;
   }
 }
