--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -28,9 +28,13 @@ ul {
 body {
   position: relative;
   margin: auto;
-  padding: 0px;
+  font-family: @font-face-primary;
+  line-height: 24px;
+  text-transform: uppercase;
+  text-align: center;
+
   @media (min-width: 1200px) {
-    background: #f2f2f2;
+    background: @color-7;
   }
 }
 
@@ -39,7 +43,6 @@ button {
   background: none;
 }
 
-// picture {
-//   height: 0px;
-//   display: block;
-// }
+img {
+  display: block;
+}
