сверстал страницу photo

--- a/less/blocks/heading.less
+++ b/less/blocks/heading.less
@@ -1,4 +1,4 @@
-.content {
+.heading {
   border-bottom: 1px solid @color-10;
 
   &:last-of-type {
@@ -12,7 +12,7 @@
   }
 }
 
-.content__title {
+.heading__title {
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
@@ -24,7 +24,7 @@
   }
 }
 
-.content__text {
+.heading__text {
   color: @color-2;
   font-size: 14px;
   line-height: 24px;
