--- a/less/blocks/intro.less
+++ b/less/blocks/intro.less
@@ -50,3 +50,32 @@
     width: 460px;
   }
 }
+
+.page-header--photo {
+  .intro {
+    height: 158px;
+    background-position: center bottom, center bottom;
+    background-size: 105%, 235%;
+
+    @media @tablet {
+      height: 290px;
+      background-size: 105%, 100%;
+    }
+
+    @media @desktop {
+      height: 301px;
+    }
+  }
+
+  .intro__img {
+    width: 229px;
+
+    @media @tablet {
+      width: 459px;
+    }
+
+    @media @desktop {
+      width: 460px;
+    }
+  }
+}
