--- a/less/blocks/player.less
+++ b/less/blocks/player.less
@@ -39,24 +39,28 @@
   bottom: -42px;
   fill: #5c6870;
   cursor: pointer;
+  height: 20px;
 
   &:hover {
     fill: @color-2;
   }
-  
+
   &:active {
     opacity: .3;
   }
 }
 
 .player__item--replay {
+  width: 16px;
   left: 25px;
 }
 
 .player__item--subtitles {
+  width: 32px;
   left: 174px;
 }
 
 .player__item--fullscreen {
+  width: 20px;
   left: 237px;
 }
