--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -33,7 +33,7 @@ body {
   text-transform: uppercase;
   text-align: center;
 
-  @media (min-width: 1200px) {
+  @media @desktop {
     background: @color-7;
   }
 }
