--- a/less/style.less
+++ b/less/style.less
@@ -13,7 +13,7 @@
 @import "blocks/page-footer.less";
 @import "blocks/social.less";
 @import "blocks/copyright.less";
-@import "blocks/content.less";
+@import "blocks/heading.less";
 @import "blocks/photos.less";
 @import "blocks/player.less";
 @import "blocks/video.less";
