Сделана разметка формы

--- a/less/blocks/intro.less
+++ b/less/blocks/intro.less
@@ -51,7 +51,8 @@
   }
 }
 
-.page-header--photo {
+.page-header--photo,
+.page-header--form {
   .intro {
     height: 158px;
     background-position: center bottom, center bottom;
