--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -9,20 +9,20 @@
   @media @tablet {
     flex-direction: row;
     justify-content: space-between;
-    padding: 36px 60px;
+    padding: 36px 8%;
   }
 
   @media @desktop {
-    padding: 36px 45px;
+    padding: 36px 4%;
   }
 }
 
 .page-footer__menu {
   @media @tablet {
-    margin-left: -8px;
+    padding-right: 16px;
   }
 
   @media @desktop {
-    margin-left: -18px;
+    padding-right: 36px;
   }
 }
