--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -1,6 +1,8 @@
 .page-header {
   position: relative;
-  .container ();
+  display: flex;
+  flex-direction: column;
+  // .container ();
   z-index: 1;
   background: @color-3;
 }
