--- a/less/style.less
+++ b/less/style.less
@@ -22,5 +22,6 @@
 @import "blocks/offers.less";
 @import "blocks/offer.less";
 @import "blocks/hashtag.less";
+@import "blocks/map.less";
 
 @import "scaffolding.less";
