--- a/less/variables.less
+++ b/less/variables.less
@@ -1,7 +1,8 @@
-@font-face-primary: 'PT Sans', 'Roboto', sans-serif;
+@font-face-primary: 'PT Sans', 'Tahoma', sans-serif;
 
 @tablet: ~"(min-width: 768px)";
 @desktop: ~"(min-width: 1200px)";
+@variable: ~"(min-resolution: 144dpi), (min-resolution: 1.5dppx)";
 
 @color-1: #000000; //black
 @color-2: #333333; // darkgray
