--- a/less/blocks/intro.less
+++ b/less/blocks/intro.less
@@ -7,9 +7,9 @@
     url("../img/bg-back-mobile@1x.jpg");
   background-position: center bottom, center;
   background-repeat: no-repeat;
-  background-size: 105%, cover;
+  background-size: 115%, cover;
 
-  @media (min-resolution: 144dpi), (min-resolution: 1.5dppx) {
+  @media @variable {
     background-image:
       url("../img/bg-intro-triangle-mobile.svg"),
       url("../img/bg-back-mobile@2x.jpg");
@@ -17,16 +17,17 @@
 
   @media @tablet {
     height: 518px;
+    background-size: 105%, cover;
     background-image:
       url("../img/bg-intro-triangle-tablet.svg"),
       url("../img/bg-back-tablet@1x.jpg");
   }
 
-  @media (min-width: 768px) and (min-resolution: 144dpi),
-         (min-width: 768px) and (min-resolution: 1.5dppx) {
+  @media @tablet and @variable,
+         @tablet and @variable {
     background-image:
-    url("../img/bg-intro-triangle-tablet.svg"),
-    url("../img/bg-back-tablet@2x.jpg");
+      url("../img/bg-intro-triangle-tablet.svg"),
+      url("../img/bg-back-tablet@2x.jpg");
   }
 
   @media @desktop {
@@ -35,11 +36,11 @@
       url("../img/bg-back-desktop@1x.jpg");
   }
 
-  @media (min-width: 1200px) and (min-resolution: 144dpi),
-         (min-width: 1200px) and (min-resolution: 1.5dppx) {
+  @media @desktop and @variable,
+         @desktop and @variable {
     background-image:
-    url("../img/bg-intro-triangle-desktop.svg"),
-    url("../img/bg-back-desktop@2x.jpg");
+      url("../img/bg-intro-triangle-desktop.svg"),
+      url("../img/bg-back-desktop@2x.jpg");
   }
 }
 
