--- a/less/blocks/offer.less
+++ b/less/blocks/offer.less
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 256px;
+    width: 33.33%;
     padding: 0px;
     text-align: center;
     padding: 60px 45px 63px;
@@ -18,7 +18,6 @@
   }
 
   @media @desktop {
-    width: 400px;
     padding: 60px 55px 63px;
   }
 }
@@ -33,39 +32,39 @@
   &--house {
     width: 39px;
     height: 37px;
+
+    @media @tablet {
+      width: 75px;
+      height: 72px;
+      padding-top: 2px;
+    }
   }
 
   &--gift {
     width: 32px;
     height: 38px;
+
+    @media @tablet {
+      width: 64px;
+      height: 74px;
+    }
   }
 
   &--burger {
     width: 35px;
     height: 40px;
+
+    @media @tablet {
+      width: 77px;
+      height: 68px;
+      padding-top: 9px;
+    }
   }
 
   @media @tablet {
     position: relative;
     top: 0px;
     left: 0px;
-
-    &--house {
-      width: 75px;
-      height: 72px;
-      padding-top: 2px;
-    }
-
-    &--gift {
-      width: 64px;
-      height: 74px;
-    }
-
-    &--burger {
-      width: 77px;
-      height: 68px;
-      padding-top: 9px;
-    }
   }
 }
 
