--- a/less/blocks/page-heading.less
+++ b/less/blocks/page-heading.less
@@ -1,5 +1,5 @@
 .page-heading {
-  .container ();
+  // .container ();
   background: @color-3;
 }
 
@@ -7,14 +7,14 @@
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
-  width: 280px;
+  width: 85%;
   margin: auto;
   padding-top: 40px;
   padding-bottom: 30px;
 
   @media @tablet {
     font-size: 21px;
-    width: 500px;
+    width: 65%;
     margin: auto;
     padding-top: 50px;
     padding-bottom: 30px;
@@ -29,12 +29,14 @@
   padding-bottom: 6px;
 
   &::after {
-    position: absolute;
+    position: relative;
+    margin: auto;
     content: "";
     display: block;
     width: 320px;
     height: 37px;
-    background: url("../img/bg-triangle.svg");
+    background-image: url("../img/bg-triangle.svg");
+    background-size: cover;
     bottom: -37px;
     z-index: 1;
   }
@@ -46,8 +48,4 @@
       display: none;
     }
   }
-}
-
-.page-header--photos {
-  
 }
