--- a/less/blocks/search.less
+++ b/less/blocks/search.less
@@ -1,14 +1,14 @@
 .search {
-  .container ();
-  padding: 30px 20px 50px;
+  // .container ();
+  padding: 30px 6% 50px;
   text-align: center;
 
   @media @tablet {
-    padding: 58px 155px;
+    padding: 58px 21%;
   }
 
   @media @desktop {
-    padding: 50px 370px 70px;
+    padding: 50px 31% 70px;
   }
 }
 
