Стилизована страница Photo

--- a/less/blocks/heading.less
+++ b/less/blocks/heading.less
@@ -1,14 +1,11 @@
 .heading {
-  border-bottom: 1px solid @color-10;
-
-  &:last-of-type {
-    border: none;
-    padding: 24px 20px;
-  }
+  min-width: 320px;
+  margin: auto;
+  padding: 24px 0px;
 
   @media @tablet {
     border-bottom: none;
-    padding: 64px 20px;
+    padding: 62px 20px;
   }
 }
 
@@ -20,7 +17,7 @@
 
   @media @tablet {
     font-size: 30px;
-    font-weight: 400;
+    font-weight: 700;
   }
 }
 
@@ -30,6 +27,8 @@
   line-height: 24px;
   font-weight: 400;
   padding: 15px 5px;
+  width: 320px;
+  margin: auto;
 
   @media @tablet {
     width: 440px;
