--- a/less/blocks/main-nav.less
+++ b/less/blocks/main-nav.less
@@ -16,7 +16,7 @@
   height: 0px;
   position: relative;
   top: -56px;
-  // .container;
+  min-width: 320px;
   display: flex;
   justify-content: center;
   z-index: 1;
