--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  // .container ();
+  min-width: 320px;
   z-index: 1;
   background: @color-3;
 }
