--- a/less/variables.less
+++ b/less/variables.less
@@ -2,7 +2,9 @@
 
 @tablet: ~"(min-width: 768px)";
 @desktop: ~"(min-width: 1200px)";
-@variable: ~"(min-resolution: 144dpi), (min-resolution: 1.5dppx)";
+@variable: ~"(min-resolution: 144dpi) and (min-resolution: 1.5dppx)";
+@variable1: ~"(min-resolution: 144dpi)";
+@variable2: ~"(min-resolution: 1.5dppx)";
 
 @color-1: #000000; //black
 @color-2: #333333; // darkgray
