--- a/less/blocks/intro.less
+++ b/less/blocks/intro.less
@@ -17,14 +17,14 @@
 
   @media @tablet {
     height: 518px;
-    background-size: 105%, cover;
+    background-size: 106%, cover;
     background-image:
       url("../img/bg-intro-triangle-tablet.svg"),
       url("../img/bg-back-tablet@1x.jpg");
   }
 
-  @media @tablet and @variable,
-         @tablet and @variable {
+  @media @tablet and @variable1,
+         @tablet and @variable2 {
     background-image:
       url("../img/bg-intro-triangle-tablet.svg"),
       url("../img/bg-back-tablet@2x.jpg");
@@ -36,8 +36,8 @@
       url("../img/bg-back-desktop@1x.jpg");
   }
 
-  @media @desktop and @variable,
-         @desktop and @variable {
+  @media @desktop and @variable1,
+         @desktop and @variable2 {
     background-image:
       url("../img/bg-intro-triangle-desktop.svg"),
       url("../img/bg-back-desktop@2x.jpg");
