Стилизована на 95% страница form

--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -1,5 +1,6 @@
 .page-footer {
-  .container ();
+  margin: auto;
+  max-width: 500px;
   padding: 37px 0px 23px;
   display: flex;
   flex-direction: column;
@@ -10,6 +11,7 @@
     flex-direction: row;
     justify-content: space-between;
     padding: 36px 8%;
+    max-width: 1200px;
   }
 
   @media @desktop {
