--- a/less/blocks/page-heading.less
+++ b/less/blocks/page-heading.less
@@ -51,7 +51,8 @@
   }
 }
 
-.page-heading--photo {
+.page-heading--photo,
+.page-heading--form {
   @media @tablet {
     padding: 28px 0px;
     font-size: 30px;
