--- a/less/style.less
+++ b/less/style.less
@@ -23,5 +23,12 @@
 @import "blocks/offer.less";
 @import "blocks/hashtag.less";
 @import "blocks/map.less";
+@import "blocks/form.less";
+@import "blocks/field-group.less";
+@import "blocks/field-text.less";
+@import "blocks/field-radio.less";
+@import "blocks/field-checkbox.less";
+@import "blocks/field-action.less";
+@import "blocks/modal.less";
 
 @import "scaffolding.less";
