--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -1,4 +1,6 @@
-* {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -33,6 +35,7 @@ body {
   text-transform: uppercase;
   text-align: center;
   min-width: 320px;
+  max-width: 1200px;
 }
 
 button {
@@ -42,4 +45,8 @@ button {
 
 img {
   display: block;
+}
+
+textarea {
+  vertical-align: top;
 }
