--- a/less/blocks/field-text.less
+++ b/less/blocks/field-text.less
@@ -24,7 +24,6 @@
   display: flex;
   align-items: center;
   width: 100%;
-  max-width: 500px;
   margin-bottom: 20px;
 
   &:last-of-type {
@@ -40,11 +39,12 @@
 
 .field-text__input {
   position: relative;
-  padding: 16px 22px;
+  padding: 16px 18px;
   border: none;
   background: @color-7;
   width: 100%;
   outline: none;
+  resize: none;
 
   &:hover {
     background: @color-10;
@@ -72,7 +72,6 @@
 
     @media @tablet {
       width: 100%;
-      max-width: 1200px;
     }
   }
 
@@ -87,12 +86,10 @@
 
 .field-text__wrapper {
   width: 100%;
-  max-width: 500px;
 }
 
 .field-text__wrapper--textarea {
   @media @tablet {
-    max-width: 1200px;
     margin-top: 40px;
   }
 }
