--- a/less/variables.less
+++ b/less/variables.less
@@ -1,10 +1,10 @@
 @font-face-primary: 'PT Sans', 'Tahoma', sans-serif;
 
-@tablet: ~"(min-width: 768px)";
-@desktop: ~"(min-width: 1200px)";
-@variable: ~"(min-resolution: 144dpi) and (min-resolution: 1.5dppx)";
-@variable1: ~"(min-resolution: 144dpi)";
-@variable2: ~"(min-resolution: 1.5dppx)";
+@tablet: ~"(min-width: 788px)";
+@desktop: ~"(min-width: 1220px)";
+@retina: ~"(min-resolution: 144dpi) and (min-resolution: 1.5dppx)";
+@retina-dpi: ~"(min-resolution: 144dpi)";
+@retina-dppx: ~"(min-resolution: 1.5dppx)";
 
 @color-1: #000000; //black
 @color-2: #333333; // darkgray
