--- a/less/blocks/intro.less
+++ b/less/blocks/intro.less
@@ -9,7 +9,7 @@
   background-repeat: no-repeat;
   background-size: 115%, cover;
 
-  @media @variable {
+  @media @retina {
     background-image:
       url("../img/bg-intro-triangle-mobile.svg"),
       url("../img/bg-back-mobile@2x.jpg");
@@ -23,8 +23,8 @@
       url("../img/bg-back-tablet@1x.jpg");
   }
 
-  @media @tablet and @variable1,
-         @tablet and @variable2 {
+  @media @tablet and @retina-dpi,
+         @tablet and @retina-dppx {
     background-image:
       url("../img/bg-intro-triangle-tablet.svg"),
       url("../img/bg-back-tablet@2x.jpg");
@@ -36,8 +36,8 @@
       url("../img/bg-back-desktop@1x.jpg");
   }
 
-  @media @desktop and @variable1,
-         @desktop and @variable2 {
+  @media @desktop and @retina-dpi,
+         @desktop and @retina-dppx {
     background-image:
       url("../img/bg-intro-triangle-desktop.svg"),
       url("../img/bg-back-desktop@2x.jpg");
