--- a/less/blocks/modal.less
+++ b/less/blocks/modal.less
@@ -1,3 +1,90 @@
 .modal {
   display: none;
+  width: 320px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-left: -170px;
+  margin-top: -140px;
+  z-index: 30;
+  background: @color-3;
+  box-shadow: -1px 0px 40px -2px rgba(0,0,0,0.3);
+
+  @media @tablet {
+    width: 400px;
+    margin-left: -200px;
+    margin-top: -175px;
+  }
+}
+
+.modal__title {
+  color: @color-1;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+  padding: 52px 55px 7px;
+
+  @media @tablet {
+    width: 220px;
+    font-size: 30px;
+    line-height: 40px;
+    margin: auto;
+    padding: 60px 0px 0px;
+  }
+}
+
+.modal__text {
+  color: @color-2;
+  font-size: 14px;
+  font-weight: 400;
+  padding: 27px 55px;
+}
+
+.modal__btn {
+  width: 180px;
+  margin: auto;
+  margin-bottom: 35px;
+
+  @media @tablet {
+    width: 272px;
+    margin-bottom: 50px;
+  }
+}
+
+.modal--success {
+  display: block;
+  background: @color-7;
+
+  @media @tablet {
+    width: 640px;
+    margin-left: -320px;
+  }
+
+  .modal__title {
+    background: @color-3;
+
+    @media @tablet {
+      padding-left: 101px;
+      padding-right: 101px;
+      width: 100%;
+    }
+  }
+
+  .modal__text {
+    background: @color-3;
+  }
+
+  .modal__btn {
+    margin: 20px 0px;
+    width: 280px;
+
+    @media @tablet {
+      width: 458px;
+      margin: 44px 0px;
+    }
+  }
+}
+
+.modal--error {
+  display: block;
 }
