Добавил анимацию для всплывающего окна формы, вставил интерактивную карту

--- a/less/blocks/modal.less
+++ b/less/blocks/modal.less
@@ -87,4 +87,12 @@
 
 .modal--error {
   display: block;
+  animation: a .6s;
+}
+
+@keyframes a {
+  0% {transform: translateY(-2000px)}
+  70% {transform: translateY(30px)}
+  90% {transform: translateY(-10px)}
+  100% {transform: translateY(0px)}
 }
